--- a/dogbarks/package.json
+++ b/dogbarks/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "google-maps-react": "^2.0.2",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
     "react-scripts": "3.0.1"
