--- a/dog_barks_api/package.json
+++ b/dog_barks_api/package.json
@@ -4,19 +4,33 @@
   "description": "RESTful API with Node.js, Express, and PostgreSQL",
   "main": "index.js",
   "scripts": {
-    "start": "index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel server.js --out-dir build",
+    "dev-start": "babel-watch server.js"
   },
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-generator": "^4.16.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "morgan": "~1.9.1",
     "passport-jwt": "^4.0.0",
-    "pg": "^7.11.0",
-    "sequelize": "^5.19.4"
+    "pg": "^7.14.0",
+    "sequelize": "^5.19.4",
+    "uuid": "^3.3.3"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-watch": "^7.0.0",
+    "make-runnable": "^1.3.6",
+    "babel-polyfill": "^6.26.0"
   }
 }
