--- a/dog_barks_api/package.json
+++ b/dog_barks_api/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-generator": "^4.16.0",
     "http-errors": "~1.6.3",
@@ -27,10 +28,12 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
     "babel-cli": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-watch": "^7.0.0",
-    "make-runnable": "^1.3.6",
-    "babel-polyfill": "^6.26.0"
+    "make-runnable": "^1.3.6"
   }
 }
