--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "deck.gl": "^7.3.6",
+    "history": "^4.10.1",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.5.0",
     "react-axios": "^2.0.3",
