--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "deck.gl": "^7.3.6",
+    "g": "^2.0.1",
     "history": "^4.10.1",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.5.0",
@@ -12,6 +13,7 @@
     "react-places-autocomplete": "^7.2.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   }
