--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.10.1",
     "react-axios": "^2.0.3",
+    "react-lazyload": "^2.6.7",
     "react-map-gl": "^5.1.2",
     "react-map-gl-geocoder": "^2.0.11",
     "react-places-autocomplete": "^7.2.1",
