--- a/dogbarks/package.json
+++ b/dogbarks/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "google-maps-react": "^2.0.2",
+    "jwt-decode": "^3.1.1",
     "mapbox-gl": "^1.5.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.14",
