--- a/dog_barks_api/package.json
+++ b/dog_barks_api/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "audit": "0.0.6",
     "bcrypt": "^3.0.7",
+    "caniuse-lite": "^1.0.30001173",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
